--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
 
 env:
   DATABASE_URL: postgresql://testuser:testpassword@localhost:5432/news_api_test
@@ -110,12 +110,11 @@ jobs:
           npm audit --audit-level moderate
           echo "✅ Security audit completed"
         continue-on-error: true
-
   build:
     name: 🏗️ Build Application
     runs-on: ubuntu-latest
     needs: [test, security-audit]
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
     
     steps:
       - name: 📥 Checkout code
@@ -172,12 +171,11 @@ jobs:
           echo "🚀 Deploying to staging environment..."
           echo "📍 Staging URL: https://staging.news-api.example.com"
           echo "✅ Deployment to staging completed"
-
   deploy-production:
     name: 🚀 Deploy to Production
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     environment:
       name: production
       url: https://api.news-example.com
